fixed links in footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -88,7 +88,7 @@
 					<h5>Navigation</h5>
 					<ul>
 						<li class="nav-item">
-							<a class="smooth-scroll" href="https://jackclayton.com">Home</a>
+							<a class="smooth-scroll" href="https://jackclayton.com/#home">Home</a>
 						</li>
 
 						<li class="nav-item">
@@ -116,7 +116,7 @@
 							<span><i class="fas fa-envelope"></i></span><span>Email</span>
 						</a>
 
-						<a href="https://www.linkedin.com/in/claytonjack" target="_blank" rel="noopener">
+						<a href="https://www.linkedin.com/in/clayton-jack/" target="_blank" rel="noopener">
 							<span><i class="fab fa-linkedin"></i></span><span>LinkedIn</span>
 						</a>
 
