--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -110,7 +110,7 @@
 				</div>
 
 				<div class="section">
-					<h5>Contact me:</h5>
+					<h5>Contact me</h5>
 					<div class="icons">
 						<a href="mailto:claytojo@sheridancollege.ca" target="_blank" rel="noopener">
 							<span><i class="fas fa-envelope"></i></span><span>Email</span>
